Introduce integration tests using MySQL, MariaDB and Postgres